2009-04-24  Jonathan Pryor  <jpryor@novell.com>

	* src/**/*: Flush; syncs to DbLinq r1053.  Adds
	  DataContext(string,MappingSource) support, the beginnings of object
	  tracking, more tests...

2009-04-08  Jonathan Pryor  <jpryor@novell.com>

	* **/* (svn:ignore): Ignore generated files and directories.
	* src/**/*: Flush; syncs to DbLinq r1043.

2009-03-31  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Remove make warning about overriding dist-local.

2009-03-30  Jonathan Pryor  <jpryor@novell.com>

	* System.Data.Linq.dll.sources: Remove
	  src/DbLinq/Factory/Implementation/AbstractObjectFactory.cs, add 
	  src/DbLinq/Data/Linq/SqlClient/Sql2008Provider.cs.
	* src/**/*: Flush; syncs to DbLinq r1038, fixes
	  System.Data.Linq.SqlClient.Sql200?Provider cor-compare differences,
	  unit test execution order dependency issues, namespace names within
	  tests, etc.

2009-03-27  Jonathan Pryor  <jpryor@novell.com>

	* src/DbLinq.sln,
	  src/DbLinq.SqlServer/Test/DbLinq.SqlServer_test_ndb.csproj: Flush;
	  syncs to DbLinq r1029.
	* src/DbLinq.suo: Delete.
	* src (svn:ignore): Ignore DbLinq.suo.
	* src/DbLinq/Test/NullProvider.cs: Default initialize the
	  ConnectionString to "" so that the MsSqlDataContextTest tests pass.
	* System.Data.Linq_test.dll.sources: Add 
	  src/DbLinq.SqlServer/Test/MsSqlDataContextTest.cs.

2009-03-26  Jonathan Pryor  <jpryor@novell.com>

	* src/DbLinq/Data/Linq/Table.cs: Add an explicit 
	  IEnumerable<TEntity>.GetEnumerator() implementation to Table<TEntity>.
	  This is done for cor-compare compatibility with .NET.

2009-03-26  Jonathan Pryor  <jpryor@novell.com>

	* Test/: Added (though empty), to allow building unit tests located in
	  src/*/Test/**.
	* System.Data.Linq_test.dll.sources: Added; unit tests.

2009-03-26  Jonathan Pryor  <jpryor@novell.com>

	* src/DbLinq/System.Data.Linq/Binary.cs: Update to pass the unit tests.
	* Makefile: Build against System.Runtime.Serialization.dll so that